# advent-of-code-2025

./: Cargo.toml  README.md
.cargo/: config.toml
data/examples/: 01-2.txt  01-3.txt  02-2.txt  03-2.txt  04-2.txt  05-2.txt  05-3.txt  06-2.txt  07-2.txt  08-2.txt  09-2.txt  09-3.txt  10-2.txt
src/: main.rs
