[package]
name = "aoc_solutions"
version = "0.10.0"
authors = [
    "Nick Davies <github@nicolasdavies.com.au>",
]
edition = "2021"
default-run = "aoc_solutions"
publish = false

[dependencies]
advent-of-code = { path = "../advent-of-code" }
anyhow = "1.0.93"
itertools = "0.13.0"
maplit = "1.0.2"
nom = "7.1.3"
thiserror = "2.0.3"
aoc-lib = { path = "../aoc-lib" }
