[package]
name = "aoc_solutions"
version = "0.10.0"
authors = [
    "Nick Davies <github@nicolasdavies.com.au>",
]
edition = "2024"
default-run = "aoc_solutions"
publish = false

[dependencies]
advent-of-code = { git = "https://github.com/nickdavies/advent-of-code.git" }
anyhow = "1.0.100"
itertools = "0.14.0"
maplit = "1.0.2"
nom = "8.0.0"
thiserror = "2.0.17"
aoc-lib = { git = "https://github.com/nickdavies/aoc-lib.git" }
microlp = "0.2.11"
